--- a/style.css
+++ b/style.css
@@ -3978,6 +3978,12 @@ figure.wp-caption img {
 
 .btn {
   border-radius: 0; }
+  .btn.btn-white {
+    border-color: #fff;
+    color: #fff; }
+    .btn.btn-white:hover {
+      background-color: #fff;
+      color: #f37021; }
 
 strong {
   font-weight: 500; }
@@ -4192,10 +4198,8 @@ ul li, ol li {
         height: 375px;
         background-position: center center; } }
 
-@media (min-width: 1220px) {
-  .content-box-module {
-    padding-top: 30px;
-    margin-top: 60px; } }
+.content-box-module {
+  margin-top: 60px; }
 
 .shortcode-ui-preview-fallback {
   text-align: center;
